[package]
name = "pca9570"
description = "Abstraciton for PCA9570 I/O expander"
keywords = ["gpio", "PCA9570", "no_std", "expander", "ic"]
categories  = ["embedded", "hardware-support", "no-std"]
authors = ["Jennifer Glauche <mail@cargo23.jglauche.de>", "[original fork] PEGASUS GmbH <info@pegasus-aero.de>"]
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
bitmaps = { version = "3.1.0", default-features = false }
cortex-m = { version = "0.7.4", optional = true }
spin = { version = "0.9.2", optional = true }

[dev-dependencies]
mockall = "0.11.0"

[features]
default = ["example", "alloc"]
# Contains a dummy I2C bus for examples
example = []
alloc = []
# Fail on warnings
strict = []
